# lost-dream-crm

./: .gitignore  Makefile  README.md  docker-compose.yml
infra/nginx/: nginx.conf
services/service-auth/: .env.example  Dockerfile  alembic.ini  pyproject.toml  start.sh
services/service-auth/src/: main.py  settings.py
services/service-auth/src/migrations/: env.py
services/service-auth/src/models/: __init__.py  customer.py
services/service-crm/: pyproject.toml  start.sh
services/service-crm/src/: main.py  settings.py
services/service-crm/src/dependencies/: db_dependency.py
services/service-crm/src/migrations/: env.py
services/service-crm/src/models/: __init__.py  mixins.py  user.py
